--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <section class="main">
         <div class="container main-container">
             <h1 class="main-title">Effective Solutions for Your Business</h1>
-            <button class="button button-main" type="button">Order Service</button>
+            <button class="button button-main" type="button" >Order Service</button>
         </div>
       </section>
 
@@ -392,41 +392,140 @@
             </p>
          </div>
     
-     <div class="bottom-social">
-  <p class="bottom-social-text">Social media</p>
-  <ul class="bottom-icon-list">
-              <li class="bottom-icon-item">
-                <a href="" class="bottom-icon-link">
-                  <svg class="bottom-icone" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="bottom-icon-item">
-                <a href="" class="bottom-icon-link">
-                  <svg class="bottom-icone" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="bottom-icon-item">
-                <a href="" class="bottom-icon-link">
-                  <svg class="bottom-icone" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="bottom-icon-item">
-                <a href="" class="bottom-icon-link">
-                  <svg class="bottom-icone" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-               </ul>
-     </div>
+            <div class="bottom-social">
+          <p class="bottom-social-text">Social media</p>
+          <ul class="bottom-icon-list">
+                      <li class="bottom-icon-item">
+                        <a href="" class="bottom-icon-link">
+                          <svg class="bottom-icone" width="24" height="24">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                          </svg>
+                        </a>
+                      </li>
+                      <li class="bottom-icon-item">
+                        <a href="" class="bottom-icon-link">
+                          <svg class="bottom-icone" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                          </svg>
+                        </a>
+                      </li>
+                      <li class="bottom-icon-item">
+                        <a href="" class="bottom-icon-link">
+                          <svg class="bottom-icone" width="24" height="24">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                          </svg>
+                        </a>
+                      </li>
+                      <li class="bottom-icon-item">
+                        <a href="" class="bottom-icon-link">
+                          <svg class="bottom-icone" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                          </svg>
+                        </a>
+                      </li>
+                       </ul>
+            </div>
+      <form class="footer-form">
+          <label class="footer-label" for="">
+            Subscribe
+          </label>
+          <div class="footer-inp-btn">
+            <input
+              class="footer-input"
+              type="email"
+              placeholder="E-mail"
+              value=""
+              required
+            />
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <span>
+                <svg class="footer-btn-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-letter"></use>
+                </svg>
+              </span>
+            </button>
+          </div>
+        </form>
     </div>
     </footer>
+
+    <!--#region modal-->
+
+  <div class="backdrop is-open">
+      <div class="modal">
+       <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="close-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-titel">Leave your contacts and we will call you back</p>
+        <form action="">
+          <div class="modal-field">
+            <label for="user-name"><span class="label-text">Name</span></label>
+            <div class="model-field-wrap">
+              <input
+                type="text"
+                class="modal-input"
+                name="user-name"
+                required
+                id="user-name"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-tel"><span class="label-text">Phone</span></label>
+            <div class="model-field-wrap">
+              <input
+                type="text"
+                class="modal-input"
+                name="user-tel"
+                required
+                id="user-tel"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email"
+              ><span class="label-text">Email</span></label
+            >
+            <div class="model-field-wrap">
+              <input
+                type="email"
+                class="modal-input"
+                name="user-email"
+                required
+                id="user-email"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-text"
+              ><span class="label-text">Comment</span></label
+            >
+            <textarea
+              name="user-text"
+              id="user-text"
+              class="modal-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <button type="submit" class="modal-send-btn">Send</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- #endregion /modal-->
+    <script src="./js/modal.js"></script>
   </body>
 
 
