--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
     <!--#region modal-->
 
-  <div class="backdrop is-open">
+  <div class="backdrop ">
       <div class="modal">
        <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="close-icon" width="24" height="24">
