--- a/index.html
+++ b/index.html
@@ -425,107 +425,108 @@
                       </li>
                        </ul>
             </div>
-      <form class="footer-form">
-          <label class="footer-label" for="">
-            Subscribe
-          </label>
-          <div class="footer-inp-btn">
-            <input
-              class="footer-input"
-              type="email"
-              placeholder="E-mail"
-              value=""
-              required
-            />
-            <button class="footer-btn" type="submit">
+      <div class="footer-form-container">
+        <p class="footer-form-title">
               Subscribe
-              <span>
-                <svg class="footer-btn-icon" width="24px" height="24px">
-                  <use href="./images/icons.svg#icon-letter"></use>
-                </svg>
-              </span>
-            </button>
-          </div>
-        </form>
+            </p>
+        <form class="footer-form">  
+            <div class="footer-inp-btn">
+              <input
+                class="footer-input"
+                type="email"
+                placeholder="E-mail"
+                value=""
+                required
+              />
+              <button class="footer-btn" type="submit">
+                Subscribe
+                <span>
+                  <svg class="footer-btn-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-letter"></use>
+                  </svg>
+                </span>
+              </button>
+            </div>
+          </form>
+      </div>
     </div>
     </footer>
 
     <!--#region modal-->
 
-  <div class="backdrop ">
+  <div class="backdrop is-open">
       <div class="modal">
-       <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="close-icon" width="24" height="24">
+        <button type="button" class="button-close-btn">
+          <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="modal-titel">Leave your contacts and we will call you back</p>
-        <form action="">
-          <div class="modal-field">
-            <label for="user-name"><span class="label-text">Name</span></label>
-            <div class="model-field-wrap">
+        <p class="name-modal">Leave your contacts and we will call you back</p>
+        <form name="feedback-form" autocomplete="off" novalidate>
+          <div class="field-for-modal">
+            <label for="user-name" class="label-text">Name</label>
+            <div class="only-name">
               <input
-                type="text"
-                class="modal-input"
+                class="input-form"
                 name="user-name"
-                required
                 id="user-name"
+                type="text"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="svg-form" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label for="user-tel"><span class="label-text">Phone</span></label>
-            <div class="model-field-wrap">
-              <input
-                type="text"
-                class="modal-input"
-                name="user-tel"
-                required
-                id="user-tel"
-              />
-              <svg class="modal-icon" width="18" height="24">
+          <div class="field-for-modal">
+            <label for="phone" class="label-text">Phone</label>
+            <div class="only-name">
+              <input class="input-form" name="phone" id="phone" type="tel" />
+              <svg class="svg-form" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label for="user-email"
-              ><span class="label-text">Email</span></label
-            >
-            <div class="model-field-wrap">
-              <input
-                type="email"
-                class="modal-input"
-                name="user-email"
-                required
-                id="user-email"
-              />
-              <svg class="modal-icon" width="18" height="24">
+          <div class="field-for-modal">
+            <label for="email" class="label-text">Email</label>
+            <div class="only-name">
+              <input class="input-form" name="email" id="mail" type="email" />
+              <svg class="svg-form" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label for="user-text"
-              ><span class="label-text">Comment</span></label
-            >
+          <div class="comment-cont">
+            <label for="user-comment" class="label-text">Comment</label>
             <textarea
-              name="user-text"
-              id="user-text"
-              class="modal-comment"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
+              class="textarea-form"
             ></textarea>
           </div>
-          <button type="submit" class="modal-send-btn">Send</button>
+          <div class="comment-cont">
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+              class="modal-check visually-hidden"
+            />
+            <label for="user-privacy" class="modal-check-text"
+              ><span class="span-check">
+                <svg class="" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href class="privacy">Privacy Polici</a>
+            </label>
+          </div>
+          <button type="submit" class="btn-send">Send</button>
         </form>
       </div>
     </div>
 
-    <!-- #endregion /modal-->
-    <script src="./js/modal.js"></script>
   </body>
 
 
