--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <a href class="privacy">Privacy Polici</a>
+                <a href class="privacy">Privacy Policy</a>
             </label>
           </div>
           <button type="submit" class="btn-send">Send</button>
