--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
               class="textarea-form"
             ></textarea>
           </div>
-          <div class="comment-cont">
+          <div class="check-cont">
             <input
               type="checkbox"
               name="user-privacy"
