--- a/index.html
+++ b/index.html
@@ -430,14 +430,15 @@
               Subscribe
             </p>
         <form class="footer-form">  
-            <div class="footer-inp-btn">
+            <label  class="label-footer">
               <input
+                name="email"
                 class="footer-input"
                 type="email"
                 placeholder="E-mail"
                 value=""
                 required
-              />
+              /></label>
               <button class="footer-btn" type="submit">
                 Subscribe
                 <span>
@@ -446,7 +447,8 @@
                   </svg>
                 </span>
               </button>
-            </div>
+            
+          
           </form>
       </div>
     </div>
@@ -454,7 +456,7 @@
 
     <!--#region modal-->
 
-  <div class="backdrop is-open">
+  <div class="backdrop is-ope">
       <div class="modal">
         <button type="button" class="button-close-btn">
           <svg class="close-icon" width="8" height="8">
