--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
               /></label>
               <button class="footer-btn" type="submit">
                 Subscribe
-                  <svg class="footer-btn-icon" width="24px" height="24px">
+                  <svg class="footer-btn-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-letter"></use>
                   </svg>
               </button>
