--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@
 
     <!--#region modal-->
 
-  <div class="backdrop is-ope">
+  <div class="backdrop is-open">
       <div class="modal">
-        <button type="button" class="button-close-btn">
+        <button type="button" class="modal-close-btn">
           <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -489,7 +489,7 @@
           <div class="field-for-modal">
             <label for="email" class="label-text">Email</label>
             <div class="only-name">
-              <input class="input-form" name="email" id="mail" type="email" />
+              <input class="input-form" name="email" id="email" type="email" />
               <svg class="svg-form" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
