--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
               value="true"
               class="modal-check visually-hidden"
             />
-            <label for="user-privacy" class="modal-check-text"
-              ><span class="span-check">
+            <label for="user-privacy" class="modal-check-text" >
+              <span class="span-check">
                 <svg class="" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
