--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
     </div>
     </footer>
 
-    <!--#region modal-->
+    <!-------modal----->
 
   <div class="backdrop is-open">
       <div class="modal">
