--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section class="main">
         <div class="container main-container">
             <h1 class="main-title">Effective Solutions for Your Business</h1>
-            <button class="button button-main" type="button" data-modal-open >Order Service</button>
+            <button class="button button-main" type="button" data-modal-open>Order Service</button>
         </div>
       </section>
 
@@ -456,9 +456,9 @@
 
     <!-------modal----->
 
-  <div class="backdrop " data-modal >
-      <div class="modal">
-        <button type="button" class="modal-close-btn" data-modal-close >
+  <div class="backdrop "  data-modal>
+      <div class="modal" >
+        <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -528,6 +528,8 @@
         </form>
       </div>
     </div>
+
+    <script src="./js/modal.js"></script>
 
   </body>
 
